--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 <meta charset="UTF-8">
 <title></title>
 <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
-<script src="/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="/bower_components/angular/angular.min.js"></script>
-<script src="/client/app.js"></script>
+
 
 
 </head>
@@ -15,16 +12,19 @@
 
 
 
-<div ng-controller="MainController">
+<!-- <div ng-controller="MainController">
 	<p>{{data}}</p>
-</div>
+</div> -->
 
 
 
-<script src="/client/module/common/common_module.js"></script>
+<!-- <script src="/client/module/common/common_module.js"></script>
 <script src="/client/module/common/common_services.js"></script>
-<script src="/client/module/common/common_controller.js"></script>
+<script src="/client/module/common/common_controller.js"></script> -->
 
+<script src="/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/bower_components/angular/angular.min.js"></script>
+<script src="/client/app.js"></script>
 </body>
-
 </html>
