--- a/index.html
+++ b/index.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
-<html ng-app='app'>
+<html>
 <head>
 	<meta charset="UTF-8">
 	<title></title>
 	<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
-	<div ng-controller="MainController">
-		<p>{{1+2}}</p>
-	</div>
-
+	
 	<script src="/bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="/bower_components/angular/angular.min.js"></script>
-	<script src="/client/app.js"></script>
-	<script src="/client/module/common/module.js"></script>
-	<script src="/client/module/common/controller.js"></script>
-	<script src="/client/module/common/service.js"></script>
+	
 </body>
 </html>
